--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap");
 @import "_variables";
 @import "_elements";
 
@@ -6,135 +7,55 @@
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
+    "Open Sans", "Helvetica Neue", sans-serif;
+  margin-top: 60px;
 }
 
-main {
-  line-height: 1.6;
-  grid-column-start: 2;
-  width: 55%;
-  margin: 0 auto;
-}
-
-p {
-  font-size: $fontMedium;
-}
-
-.hero {
-  margin-top: 150px;
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-bottom: 150px;
-  .hero__photo {
-    height: 70vh;
-    width: 90%;
-    background-image: url("https://source.unsplash.com/random/");
-  }
-  h2 {
-    font-weight: 500;
-    font-size: 32px;
-    margin-top: 80px;
-    margin-bottom: 120px;
-  }
-  p {
-    font-size: $fontMedium;
-    span {
-      font-size: $fontMedium - 5px;
-      margin-right: 50px;
-      font-weight: 500;
-    }
-  }
-}
-
-.products {
+  height: 60px;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  .product {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 10px;
-    padding: 20px 0px;
-    border-top: $border;
-    grid-column-start: span 2;
-    &:nth-child(2),
-    &:nth-child(4) {
-      div {
-        order: 1;
-      }
-    }
-    p {
-      margin-bottom: 50px;
-    }
-    .product__category {
-      @extend %categoryTitle;
-    }
-  }
-  .line {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-column-start: span 2;
-    gap: 10px;
-    .product {
-      grid-template-columns: 1fr;
-      grid-column-start: span 1;
-      p {
-        font-size: 22px;
-        margin-top: 30px;
-      }
-    }
-  }
-}
-
-.links {
-  margin-top: 100px;
-  display: grid;
-  border-top: $border;
-  padding-top: 20px;
   grid-template-columns: repeat(3, 1fr);
-  gap: 20px;
-  margin-bottom: 200px;
-  .link {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
-    h4 {
-      @extend %categoryTitle;
-      margin-bottom: 30px;
-    }
-    span {
-      font-size: 22px;
-      margin-bottom: 20px;
-    }
-  }
-}
-
-a.btn {
-  @extend %btn;
-}
-
-footer {
-  background-color: #4d4c4c;
+  align-items: center;
   width: 100%;
-  padding: 100px 0;
-  .footer__top {
-    width: 55%;
-    margin: 0 auto;
-    color: white;
-    display: grid;
-    grid-template-columns: 1.5fr 1fr;
-    span {
-      font-size: 38px;
-    }
+  padding: 0px 10%;
+  h1 {
+    place-self: center center;
+  }
+  > span {
+    justify-self: end;
+  }
+  nav {
     ul {
-      width: 100%;
       display: flex;
-      li {
+      font-family: "Montserrat", sans-serif;
+      li:not(:last-child) {
         margin-right: 10px;
       }
     }
+  }
+  .logo {
+    font-size: 48px;
+    font-weight: 500;
+    display: flex;
+    div {
+      transform: rotateZ(-15deg);
+      margin: 0px -2px;
+    }
+  }
+}
+
+.hero {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 100vh - 60px;
+  .hero__img {
+    background-image: url("https://source.unsplash.com/random");
+    background-size: cover;
+    background-position: center center;
   }
 }
