--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&display=swap");
 @import "_variables";
 @import "_elements";
 
@@ -13,6 +14,8 @@ body {
 }
 
 header {
+  background-color: white;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   position: fixed;
   top: 0;
   left: 0;
@@ -28,13 +31,21 @@ header {
   }
   > span {
     justify-self: end;
+    &:hover {
+      cursor: pointer;
+    }
   }
   nav {
     ul {
       display: flex;
       font-family: "Montserrat", sans-serif;
+      li {
+        &:hover {
+          cursor: pointer;
+        }
+      }
       li:not(:last-child) {
-        margin-right: 10px;
+        margin-right: 40px;
       }
     }
   }
@@ -52,10 +63,82 @@ header {
 .hero {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: 100vh - 60px;
+  grid-template-rows: calc(100vh - 60px);
   .hero__img {
     background-image: url("https://source.unsplash.com/random");
     background-size: cover;
     background-position: center center;
+  }
+  .hero__text {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    h2 {
+      font-family: "Playfair Display", serif;
+      font-size: 52px;
+      text-align: center;
+      width: 60%;
+      margin-bottom: 40px;
+    }
+    span {
+      font-size: 12px;
+    }
+  }
+}
+
+a {
+  color: $orange;
+  &:nth-child(1),
+  &:nth-child(3) {
+    font-weight: bold;
+  }
+}
+
+.banner {
+  background-color: #efcb56;
+  height: 60vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  h3 {
+    font-family: "Playfair Display";
+    font-size: 55px;
+    margin-bottom: 20px;
+  }
+  p {
+    width: 50%;
+    text-align: center;
+    font-family: "Playfair Display";
+    font-weight: 300;
+    font-size: 29px;
+    margin-bottom: 30px;
+  }
+  span {
+    font-size: 14px;
+  }
+}
+
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-auto-rows: 50vh;
+  .gallery__item {
+    background-size: cover;
+    background-position: center;
+    background-image: url("https://source.unsplash.com/random");
+    transition: all 0.2s linear;
+    cursor: pointer;
+    overflow: hidden;
+    &:first-child,
+    &:nth-child(5),
+    &:nth-child(7),
+    &:nth-child(10) {
+      grid-column-start: span 2;
+    }
+    .gallery__background:hover {
+      filter: blur(50px);
+    }
   }
 }
